訓練情報画面修正 ・入力チェック機能追加 ・訓練スケジュールテーブル登録追加

--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
         <tr th:each="training : ${traininglist}"  th:object="${training}">
-            <td th:text="*{id}"></td>
+            <td th:text="*{id}" hidden></td>
             <td th:text="*{trainingname}"></td>
             <td th:text="*{#temporals.format(start_date, 'yyyy/MM/dd(eee)')} + ' ～ ' + *{#temporals.format(end_date, 'yyyy/MM/dd(eee)')}"></td>
             <td>
