--- a/src/main/resources/templates/training/trainingInfo.html
+++ b/src/main/resources/templates/training/trainingInfo.html
@@ -8,9 +8,6 @@
 		<br>
 		<h2>訓練情報</h2>
 		<br>
-<!--		<div th:if="${validationError}" th:each="error : ${validationError}">-->
-<!--			<label class="text-danger" th:text="${error}"></label>-->
-<!--		</div>-->
 		<form th:action="@{/training/create}" th:object="${trainingRequest}" th:method="post">
 			<div class="input-group mb-3" hidden>
 				<span class="input-group-text">ID</span>
@@ -21,8 +18,9 @@
 				<span class="input-group-text">訓練名</span>
 				<input type="text" class="form-control" th:field="*{trainingname}" />
 			</div>
-			<div class="text-danger" th:if="${#fields.hasErrors('recruit_start_date')}" th:errors="*{recruit_start_date}"></div>
+			<div class="text-danger" th:if="${#fields.hasErrors('dateValidRecruit')}" th:errors="*{dateValidRecruit}"></div>
 			<div class="text-danger" th:if="${#fields.hasErrors('recruit_end_date')}" th:errors="*{recruit_end_date}"></div>
+			<div class="text-danger" th:if="${#fields.hasErrors('recruit_start_date')}" th:errors="*{recruit_start_date}"></div>
 			<div class="input-group mb-3">
 				<span class="input-group-text">募集期間</span>
 				<input type="date" class="form-control" name="recruit_start_date" th:value="*{recruit_start_date}" />　～　
@@ -38,6 +36,7 @@
 				<span class="input-group-text">合格発表</span>
 				<input type="date" class="form-control" name="acceptance_date" th:value="*{acceptance_date}" />
 			</div>
+			<div class="text-danger" th:if="${#fields.hasErrors('dateValidTraining')}" th:errors="*{dateValidTraining}"></div>
 			<div class="text-danger" th:if="${#fields.hasErrors('start_date')}" th:errors="*{start_date}"></div>
 			<div class="text-danger" th:if="${#fields.hasErrors('end_date')}" th:errors="*{end_date}"></div>
 			<div class="input-group mb-3">
@@ -45,12 +44,13 @@
 				<input type="date" class="form-control" name="start_date" th:value="*{start_date}" />　～　
 				<input type="date" class="form-control" name="end_date" th:value="*{end_date}" />
 			</div>
+			<div class="text-danger" th:if="${#fields.hasErrors('timeValidTraining')}" th:errors="*{timeValidTraining}"></div>
 			<div class="text-danger" th:if="${#fields.hasErrors('start_time')}" th:errors="*{start_time}"></div>
 			<div class="text-danger" th:if="${#fields.hasErrors('end_time')}" th:errors="*{end_time}"></div>
 			<div class="input-group mb-3">
 				<span class="input-group-text">授業時間</span>
-				<input type="time" list="data-list" min="09:00" max="12:00" class="form-control" name="start_time" th:value="*{start_time}" />　～　
-				<input type="time" list="data-list" min="12:00" max="18:00" class="form-control" name="end_time" th:value="*{end_time}" />
+				<input type="time" list="data-list" min="09:00" max="13:00" class="form-control" name="start_time" th:value="*{start_time}" />　～　
+				<input type="time" list="data-list" min="11:00" max="18:00" class="form-control" name="end_time" th:value="*{end_time}" />
 			</div>
 			<div class="text-danger" th:if="${#fields.hasErrors('training_hours')}" th:errors="*{training_hours}"></div>
 			<div class="input-group mb-3">
@@ -60,7 +60,6 @@
 			<br>
 			<div class="text-center">
 				<input type="submit" value="　登録　" class="btn btn-primary btn-block">
-<!--				<a href="/training/list" class="btn btn-primary btn-block">　登録　</a>-->
 				<a href="/training/list" class="btn btn-outline-primary btn-block">キャンセル</a>
 			</div>
 		</form>
