訓練情報一覧画面修正 ・削除確認メッセージ追加

--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -24,7 +24,7 @@
             <td th:text="*{#temporals.format(start_date, 'yyyy/MM/dd(eee)')} + ' ～ ' + *{#temporals.format(end_date, 'yyyy/MM/dd(eee)')}"></td>
             <td>
                 <a th:href="@{/training/update/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm">編集</a>
-                <a th:href="@{/training/delete/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm">削除</a>
+                <a th:href="@{/training/delete/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm" onclick="return confirm_delete(this.parentElement.parentElement.cells[1].firstChild.data)">削除</a>
             </td>
         </tbody>
     </table>
@@ -33,5 +33,11 @@
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
     <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light">講師一覧へ</a>
 </nav>
+<script>
+    <!-- 削除確認メッセージ -->
+	function confirm_delete(data) {
+		return window.confirm(data + "を削除しますか？")
+    };
+</script>
 </body>
 </html>
