コード整備

--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -23,6 +23,7 @@
             <td th:text="*{trainingname}"></td>
             <td th:text="*{#temporals.format(start_date, 'yyyy/MM/dd(eee)')} + ' ～ ' + *{#temporals.format(end_date, 'yyyy/MM/dd(eee)')}"></td>
             <td>
+                <a th:href="@{/training/timetable/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm">スケジュール</a>
                 <a th:href="@{/training/update/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm">編集</a>
                 <a th:href="@{/training/delete/{id}(id=*{id})}" class="btn btn-outline-secondary btn-sm" onclick="return confirm_delete(this.parentElement.parentElement.cells[1].firstChild.data)">削除</a>
             </td>
