--- a/src/main/resources/static/init.css
+++ b/src/main/resources/static/init.css
@@ -17,7 +17,7 @@ td.dow{
 }
 /* 休日 */
 td.holiday{
-	background-color: #dddddd;
+	background-color: #d1d1d1;
 }
 /* 祝日 */
 td.nholiday{
@@ -27,7 +27,10 @@ td.nholiday{
 td.nodata{
 	background-color: #ff0000;
 }
-
+/* 対象外 */
+td.outofdata {
+    background-color: #e2e7eb;
+}
 /* ----- スケジュール情報 ----- */
 #calendar td.holiday{
 	background-color: #dddddd;
