--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -14,7 +14,8 @@
         <thead class="thead-dark">
         <tr>
             <th>訓練名</th>
-            <th colspan="2">訓練期間</th>
+            <th>訓練期間</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
