・講師一覧画面作成 ・講師登録画面作成 ・祝日判定追加、コード整備

--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -36,8 +36,7 @@
 <br>
 <!-- Navbar -->
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-<!--    <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light">講師一覧へ</a>-->
-    <a href="" title="作成中です..." class="btn btn-sm btn btn-outline-light">講師一覧へ</a>
+    <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light">講師一覧へ</a>
 </nav>
 <script>
     <!-- 削除確認メッセージ -->
