--- a/src/main/resources/static/init.css
+++ b/src/main/resources/static/init.css
@@ -31,6 +31,20 @@ td.nodata{
 td.outofdata {
     background-color: #e2e7eb;
 }
+/* コンテキストメニュー */
+#contextmenu{
+    display:none;
+    position:fixed;
+    left:0px;
+    top:0px;
+    width:200px;
+    height:100px;
+    border:1px solid #000;
+    background-color:#fff;
+}
+#contextmenu li{
+    cursor:pointer;
+}
 /* ----- スケジュール情報 ----- */
 #calendar td.holiday{
 	background-color: #dddddd;
@@ -41,3 +55,4 @@ td.outofdata {
 .inputhours{
     width:40px;
 }
+
