--- a/src/main/resources/templates/training/timetable.html
+++ b/src/main/resources/templates/training/timetable.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練時間表]', scripts = ~{::script}, links = ~{::link})"></head>
-<body>
+<head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練時間表]', scripts = ~{::script}, links = ~{::link})">
+</head>
+<body  oncontextmenu="return false;">
     <h5><span th:text="${trainingname}"></span></h5>
     <table class="table  table-bordered">
     <thead>
@@ -29,7 +30,7 @@
             </tr>
             <tr>
                 <th:block  th:each="oneDay: ${oneMonth.trainings}" th:object="${oneDay}">
-                    <td th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="*{backcolor}"></td>
+                    <td oncontextmenu="showMenu(this.id)" th:id="*{id}" th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="*{backcolor}"></td><!--                    <td th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="*{backcolor}"></td>-->
                 </th:block>
             </tr>
         </th:block>
@@ -37,10 +38,42 @@
     </table>
     <br>
     <br>
-    <!-- Navbar -->
+    <!--/* Navbar */-->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
         <a th:href="@{/training/list}" class="btn btn-sm btn-outline-light btn-sm">訓練一覧へ</a>
         <a th:href="@{/training/editschedule/{id}(id=${id})}" class="btn btn-sm btn-outline-light">訓練スケジュール登録へ</a>
     </nav>
+    <!--/* contextmenu */-->
+    <div id="contextmenu">
+        <ul>
+            <li>menu1</li>
+            <li>menu2</li>
+            <li>menu3</li>
+        </ul>
+    </div>
+    <script>
+        <!--/* コンテキストメニュー */-->
+        function showMenu(id) {
+<!--            document.getElementById('contextmenu').style.left=e.pageX+"px";-->
+<!--            document.getElementById('contextmenu').style.top=e.pageY+"px";-->
+<!--            document.getElementById('contextmenu').style.display="block";-->
+            return window.alert("idは、" + id + "です")
+        };
+<!--         // Window上のマウス座標を取得する-->
+<!-- window.onmousemove = function (e) {-->
+<!--   var mouseX, mouseY;-->
+<!--    // マルチブラウザ対応のため、引数eventが指定されないブラウザは、-->
+<!--    // グローバルなeventオブジェクトを利用する。-->
+<!--    if (e) {-->
+<!--     mouseX = e.pageX;-->
+<!--     mouseY = e.pageY;-->
+<!--    } else {-->
+<!--     mouseX = event.pageX + document.body.scrollLeft;-->
+<!--     mouseY = event.pageY + document.body.scrollTop;-->
+<!--    }-->
+<!--  // 取得した値を表示する-->
+<!--  window.alert("mouse(X,Y)は、"+  mouseX  + "," + mouseY);-->
+
+    </script>
 </body>
 </html>
