--- a/TrainingList/src/main/resources/static/init.css
+++ b/TrainingList/src/main/resources/static/init.css
@@ -38,7 +38,7 @@ td.outofdata {
     left:0px;
     top:0px;
     width:200px;
-    height:100px;
+    height:200px;
     border:1px solid #000;
     background-color:#fff;
 }
@@ -56,3 +56,27 @@ td.outofdata {
     width:40px;
 }
 
+.tooltip_background{
+    z-index: 1;
+    padding: 0.5em 0.5em;
+    border: solid 3px #000000;
+    position: fixed;
+}
+
+.tooltip{
+    z-index: 3;
+    position: relative;
+    opacity: 1;
+}
+
+.tooltip_background::after{
+  content: "";
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height:100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  opacity: 0.7;
+}
