--- a/TrainingList/src/main/resources/templates/training/timetable.html
+++ b/TrainingList/src/main/resources/templates/training/timetable.html
@@ -3,7 +3,7 @@
 
 <head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練時間表]', scripts = ~{::script}, links = ~{::link})">
 </head>
-<body  oncontextmenu="return false;">
+<body>
     <h5><span th:text="${trainingname}"></span></h5>
     <table class="table  table-bordered">
     <thead>
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <th:block  th:each="oneDay: ${oneMonth.trainings}" th:object="${oneDay}" id="oneDay">
-                    <td th:id="*{id}" oncontextmenu="showMenu(this.id)" th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="@{{backcolor} hover(backcolor=*{backcolor})}"></td>
+                    <td th:id="*{id}" oncontextmenu="showMenu(this.id); return false;" th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="@{{backcolor} hover menu-target(backcolor=*{backcolor})}"></td>
                 </th:block>
             </tr>
         </th:block>
@@ -46,21 +46,11 @@
     <!--/* contextmenu */-->
     <div id="contextmenu">
         <ul>
-            <li>
-                <button type="submit" id="editTeacherDialogButton" name="update_button" onclick="editTeacherDialog(1);" data-bs-toggle="modal" data-bs-target="#teacherUpdateDialog">講師の変更</button>
-            </li>
-            <li>
-                <button type="submit" id="editTrainingDateDialogButton" name="update_button" onclick="editTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateUpdateDialog">授業日の変更</button>
-            </li>
-            <li>
-                <button type="submit" id="swapTrainingDateDialogButton" name="update_button" onclick="swapTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateSwappingDialog">授業日の入れ替え</button>
-            </li>
-            <li>
-                <button type="submit" id="editMemoDialogButton" name="update_button" onclick="editMemoDialog(1);" data-bs-toggle="modal" data-bs-target="#memoUpdateDialog">メモの変更</button>
-            </li>
-            <li>
-                <button type="submit" id="editTrainingHoursDialogButton" name="update_button" onclick="editTrainingHoursDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingHoursUpdateDialog">授業時間の変更</button>
-            </li>
+            <li id="editTeacherDialogButton" class="menu" onclick="editTeacherDialog(1);" data-bs-toggle="modal" data-bs-target="#teacherUpdateDialog">講師の変更</li>
+            <li id="editTrainingDateDialogButton" class="menu" onclick="editTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateUpdateDialog">授業日の変更</li>
+            <li id="swapTrainingDateDialogButton" class="menu" onclick="swapTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateSwappingDialog">授業日の入れ替え</li>
+            <li id="editMemoDialogButton" class="menu" onclick="editMemoDialog(1);" data-bs-toggle="modal" data-bs-target="#memoUpdateDialog">メモの変更</li>
+            <li id="editTrainingHoursDialogButton" class="menu" onclick="editTrainingHoursDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingHoursUpdateDialog">授業時間の変更</li>
         </ul>
     </div>
 
@@ -71,7 +61,7 @@
                 <form th:action="@{/training/timetable/{trainingId}/edit_teacher(trainingId=${id})}" id="editTeacher" th:method="post">
                     <div class="modal-header">
                         <h5 id="editTeacherDialogTitle">講師変更</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button"  class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -103,7 +93,7 @@
                 <form th:action="@{/training/timetable/{trainingId}/edit_date(trainingId=${id})}" id="editDate" th:method="post">
                     <div class="modal-header">
                         <h5 id="editTrainingDateDialogTitle">授業日変更</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -128,7 +118,7 @@
                 <form th:action="@{/training/timetable/{trainingId}/swap_date(trainingId=${id})}" id="swapDate" th:method="post">
                     <div class="modal-header">
                         <h5 id="swapTrainingDateDialogTitle">授業日入れ替え</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -153,7 +143,7 @@
                 <form th:action="@{/training/timetable/{trainingId}/edit_memo(trainingId=${id})}" id="editMemo" th:method="post">
                     <div class="modal-header">
                         <h5 id="editMemoDialogTitle">メモの変更</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -178,7 +168,7 @@
                 <form th:action="@{/training/timetable/{trainingId}/edit_training_hours(trainingId=${id})}" id="editTrainingHours" th:method="post">
                     <div class="modal-header">
                         <h5 id="editTrainingHoursDialogTitle">授業時間の変更</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
