--- a/src/main/resources/templates/training/timetable.html
+++ b/src/main/resources/templates/training/timetable.html
@@ -3,7 +3,7 @@
 
 <head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練時間表]', scripts = ~{::script}, links = ~{::link})">
 </head>
-<body  oncontextmenu="return false;">
+<body>
     <h5><span th:text="${trainingname}"></span></h5>
     <table class="table  table-bordered">
     <thead>
@@ -29,8 +29,8 @@
                 <td rowspan="2" th:text="*{totalTraining_days + '日'}"></td>
             </tr>
             <tr>
-                <th:block  th:each="oneDay: ${oneMonth.trainings}" th:object="${oneDay}">
-                    <td oncontextmenu="showMenu(this.id)" th:id="*{id}" th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="*{backcolor}"></td><!--                    <td th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="*{backcolor}"></td>-->
+                <th:block  th:each="oneDay: ${oneMonth.trainings}" th:object="${oneDay}" id="oneDay">
+                    <td th:id="*{id}" oncontextmenu="showMenu(this.id); return false;" th:text="*{training_hours} != '0'? *{training_hours} : ''" th:class="@{{backcolor} hover menu-target(backcolor=*{backcolor})}"></td>
                 </th:block>
             </tr>
         </th:block>
@@ -46,34 +46,149 @@
     <!--/* contextmenu */-->
     <div id="contextmenu">
         <ul>
-            <li>menu1</li>
-            <li>menu2</li>
-            <li>menu3</li>
+            <li id="editTeacherDialogButton" class="menu" onclick="editTeacherDialog(1);" data-bs-toggle="modal" data-bs-target="#teacherUpdateDialog">講師の変更</li>
+                <li id="editTrainingDateDialogButton" class="menu" onclick="editTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateUpdateDialog">授業日の変更</li>
+            <li id="swapTrainingDateDialogButton" class="menu" onclick="swapTrainingDateDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingDateSwappingDialog">授業日の入れ替え</li>
+            <li id="editMemoDialogButton" class="menu" onclick="editMemoDialog(1);" data-bs-toggle="modal" data-bs-target="#memoUpdateDialog">メモの変更</li>
+            <li id="editTrainingHoursDialogButton" class="menu" onclick="editTrainingHoursDialog(1);" data-bs-toggle="modal" data-bs-target="#trainingHoursUpdateDialog">授業時間の変更</li>
         </ul>
     </div>
-    <script>
-        <!--/* コンテキストメニュー */-->
-        function showMenu(id) {
-<!--            document.getElementById('contextmenu').style.left=e.pageX+"px";-->
-<!--            document.getElementById('contextmenu').style.top=e.pageY+"px";-->
-<!--            document.getElementById('contextmenu').style.display="block";-->
-            return window.alert("idは、" + id + "です")
-        };
-<!--         // Window上のマウス座標を取得する-->
-<!-- window.onmousemove = function (e) {-->
-<!--   var mouseX, mouseY;-->
-<!--    // マルチブラウザ対応のため、引数eventが指定されないブラウザは、-->
-<!--    // グローバルなeventオブジェクトを利用する。-->
-<!--    if (e) {-->
-<!--     mouseX = e.pageX;-->
-<!--     mouseY = e.pageY;-->
-<!--    } else {-->
-<!--     mouseX = event.pageX + document.body.scrollLeft;-->
-<!--     mouseY = event.pageY + document.body.scrollTop;-->
-<!--    }-->
-<!--  // 取得した値を表示する-->
-<!--  window.alert("mouse(X,Y)は、"+  mouseX  + "," + mouseY);-->
 
-    </script>
+<!--講師の変更ダイアログ-->
+    <div id="teacherUpdateDialog" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{/training/timetable/{trainingId}/edit_teacher(trainingId=${id})}" id="editTeacher" th:method="post">
+                    <div class="modal-header">
+                        <h5 id="editTeacherDialogTitle">講師変更</h5>
+                        <button type="button"  class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="updateTeacher_TrainingScheduleId" name="trainingScheduleId" value="0" hidden>
+                        <label for="update_teacher">講師名</label>
+                            <select class="form-select" id="update_teacher" name="teacherId">
+                                <option value="0"></option>
+                                <option
+                                        th:each="teacher : ${teacherlist}"
+                                        th:value="${teacher.id}"
+                                        th:text="${teacher.name}">
+                                </option>
+                            </select>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">更新</button>
+                        <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--授業日の変更ダイアログ-->
+    <div id="trainingDateUpdateDialog" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{/training/timetable/{trainingId}/edit_date(trainingId=${id})}" id="editDate" th:method="post">
+                    <div class="modal-header">
+                        <h5 id="editTrainingDateDialogTitle">授業日変更</h5>
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="updateDate_TrainingScheduleId" name="trainingScheduleId" value="0" hidden>
+                        <label for="update_date">授業日</label>
+                        <input type="date" class="form-select" id="update_date" name="trainingDate" th:min="${timetable_firstDay}" th:max="${timetable_lastDay}">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">更新</button>
+                        <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--授業日の入れ替えダイアログ-->
+    <div id="trainingDateSwappingDialog" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{/training/timetable/{trainingId}/swap_date(trainingId=${id})}" id="swapDate" th:method="post">
+                    <div class="modal-header">
+                        <h5 id="swapTrainingDateDialogTitle">授業日入れ替え</h5>
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="swapDate_TrainingScheduleId" name="trainingScheduleId" value="0" hidden>
+                        <label for="swap_date">授業日</label>
+                        <input type="date" class="form-select" id="swap_date" name="trainingDate" th:min="${timetable_firstDay}" th:max="${timetable_lastDay}">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">更新</button>
+                        <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--メモの変更ダイアログ-->
+    <div id="memoUpdateDialog" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{/training/timetable/{trainingId}/edit_memo(trainingId=${id})}" id="editMemo" th:method="post">
+                    <div class="modal-header">
+                        <h5 id="editMemoDialogTitle">メモの変更</h5>
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="updateMemo_TrainingScheduleId" name="trainingScheduleId" value="0" hidden>
+                        <label for="update_memo">メモ</label>
+                        <input type="text" id="update_memo" name="memo">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">更新</button>
+                        <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--授業時間の変更ダイアログ-->
+    <div id="trainingHoursUpdateDialog" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form th:action="@{/training/timetable/{trainingId}/edit_training_hours(trainingId=${id})}" id="editTrainingHours" th:method="post">
+                    <div class="modal-header">
+                        <h5 id="editTrainingHoursDialogTitle">授業時間の変更</h5>
+                        <button type="button" class="btn btn-danger close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="updateTrainingHours_TrainingScheduleId" name="trainingScheduleId" value="0" hidden>
+                        <label for="update_trainingHours">授業時間</label>
+                        <input type="number" id="update_trainingHours" name="trainingHours" placeholder="00" maxlength="2" min="00" max="24">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">更新</button>
+                        <button type="reset" data-bs-dismiss="modal" class="btn btn-secondary">キャンセル</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--ツールチップ要素-->
+    <div class="tooltip_background" id="tooltip_background" hidden="hidden">
+        <p id="tooltip" class="tooltip">sample</p>
+    </div>
 </body>
 </html>
